tests/purs/passing/Tick.purs
module Main where

import Prelude
import Effect.Console (log)

test' x = x

main = log "Done"
