tests/purs/failing/ModuleNameApostropheEnd.purs
-- @shouldFailWith ErrorParsingModule
module ModuleNameEndsWithPrime' where

import Effect.Console (log)

main = log "Done"
